# get2-backend

./: .gitignore  AI_PARTY_PLANNING_GUIDE.md  Procfile  gunicorn.conf.py  main.py  old.txt  pyproject.toml  render.yaml  test_ai_agent.py  test_ai_system.py  test_api.py  test_login.sh  test_login_local.py  test_register_local.py
ai_service/: ai_logic.py  mcp_integration.py  party_planning_agent.py  rag_system.py  serializers.py  urls.py  views.py
apps/plans/: urls.py
apps/users/: models.py  serializers.py  urls.py  views.py
apps/users/migrations/: 0001_initial.py  0002_alter_user_managers.py
backend/: settings.py  supabase_client.py  urls.py
